--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Divictus Gaming Network</title>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -28,7 +30,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container-header">
             <div class="server-bar">
 
                 <div class="info">
@@ -41,7 +43,7 @@
                     <h3>Join Discord</h3>
                 </div>
 
-                <img class="logo" src="images/divictus logo.svg" alt="">
+                <img class="logo" src="images/divictuslogo.png" alt="">
             </div>
         </div>
 
@@ -56,7 +58,27 @@
     </header>
 
     <main>
-
+        <div class="container">
+            <div class="left-container">
+                <div class="section-news">
+                    <div class="section-news-left">
+                        <img class="avatar-image" src="images/Avatars/itscooldownbg.png" alt="Account Image">
+                    </div>
+                    <div class="section-news-center">
+                        <h1>EXAMPLE NEWS</h1>
+                        <div class="publisher">
+                            <p>ItsCoolDownBG</p>
+                            <p>01.09.2025</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right-container">
+                <div class="section-account">
+                    <h1>ACCOUNT</h1>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer>
